themes/Adwaita/gtk-3.0/gtk-widgets.css
/* ... */
/************
 * Tooltips *
 ************/
.tooltip {
    padding: 4px;
    border-style: none;
    border-radius: 5px;

    background-color: alpha(@theme_tooltip_bg_color, 0.90);
    color: @theme_tooltip_fg_color;

    text-shadow: 1 1 black;
}

.tooltip * {
    background-color: alpha(@theme_tooltip_bg_color, 0.90);
}

/*****************
 * Miscellaneous *
 *****************/

.spinner:active {
    transition: 750ms linear loop;
}

.floating-bar {
    background-image: linear-gradient(to bottom, @theme_base_color 20%, shade(@theme_base_color, 0.9));
    background-color: @theme_base_color;
    border-color: @borders;

    border-radius: 3px;
    border-width: 1px;
    border-style: solid;
    box-shadow: 1 1 inset white, -1 -1 inset white;
}

.floating-bar.top {
    border-top-width: 0;
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}

.floating-bar.right {
    border-right-width: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.floating-bar.bottom {
    border-bottom-width: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.floating-bar.left {
    border-left-width: 0;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.floating-bar:backdrop {
    background-color: @theme_unfocused_base_color;
    border-color: shade(@theme_unfocused_base_color, 0.9);
    background-image: none;
    box-shadow: none;
}

.floating-bar .button {
    background-color: alpha (@theme_base_color, 0.0);
    background-image: none;

    border-style: none;
    border-image: none;

    -GtkButton-image-spacing: 0;
    -GtkButton-inner-border: 0;
}

.view.rubberband,
.rubberband {
    background-color: alpha (@theme_selected_bg_color, 0.35);

    border-color: @theme_selected_bg_color;
    border-style: solid;
    border-width: 1px;
    border-radius: 2px;
}

GtkStatusbar {
    padding: 5px;
    color: @theme_fg_color;
    -GtkStatusbar-shadow-type: none;
}

.dnd {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_selected_bg_color;
    border-radius: 0;
}

GtkTreeView.view.separator,
GtkTreeView.separator,
.separator,
.separator:hover {
    color: @borders;
}

GtkTreeView.view.separator:backdrop,
GtkTreeView.separator:backdrop,
.separator:backdrop,
.separator:hover:backdrop {
    color: @unfocused_insensitive_borders;
}

.pane-separator {
    color: shade (@inactive_frame_color, 0.80);
}

.pane-separator:hover,
.pane-separator:selected {
    color: @theme_text_color;
}

.pane-separator,
.pane-separator:hover {
    background-color: @theme_bg_color;
}

.pane-separator:backdrop,
.pane-separator:hover:backdrop {
    background-color: @theme_unfocused_bg_color;
}

.notebook .pane-separator,
.notebook .pane-separator:hover {
    background-color: @theme_base_color;
}

.notebook .pane-separator:backdrop,
.notebook .pane-separator:hover:backdrop {
    background-color: @theme_unfocused_base_color;
}

GtkImage,
GtkImage:insensitive {
    background-color: transparent;
}

/****************
 * Text Entries *
 ****************/
.entry {
    border-style: solid;
    padding: 4px;

    /* border-image defined in the -assets variants */

    color: @entry_text_color;
    background-color: @theme_base_color;
}

.entry:focus {
    box-shadow: 1 2 inset alpha(@theme_selected_bg_color, 0.1),
                1 1 inset alpha(@theme_selected_bg_color, 0.1),
                -1 -1 inset alpha(@theme_selected_bg_color, 0.2);
}

.entry.progressbar {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;

    /* border-image defined in -assets variant */

    -adwaita-progressbar-pattern: none;
}

.entry:selected {
    color: @theme_selected_fg_color;
    background-color: @theme_selected_bg_color;
}

.entry:insensitive {
    color: @insensitive_fg_color;
}

.entry:backdrop {
    color: @theme_unfocused_text_color;
}

.entry:insensitive:backdrop {
    color: @unfocused_insensitive_fg_color;
}

.entry:selected:backdrop {
    color: @theme_unfocused_selected_fg_color;
    background-color: @theme_unfocused_selected_bg_color
}

/*******************
 * Symbolic images *
 *******************/
.image {
    color: @internal_element_color;
}

.image:hover {
    color: @internal_element_prelight;
}

.image:selected {
    color: @theme_selected_fg_color;
}

/*****************
 * GtkSpinButton *
 *****************/
.spinbutton .button,
.spinbutton .button:focus {
    color: @internal_element_color;
    padding: 2px 6px;
    border-width: 0;
    border-radius: 0;
    border-style: none;
    border-image: none;
    box-shadow: 1 0 inset @inset_dark_color;
}

.spinbutton .button:backdrop {
    box-shadow: 1 0 inset @unfocused_entry_separators;
    box-shadow: none;
}

.spinbutton .button,
.spinbutton .button:backdrop {
    background-color: transparent;
    background-image: none;
}

.spinbutton .button:insensitive {
    color: @internal_element_insensitive;
}

.spinbutton .button:insensitive:backdrop {
    color: mix(@internal_element_color, @theme_unfocused_base_color, 0.7);
}

.spinbutton .button:active,
.spinbutton .button:active:focus,
.spinbutton .button:hover {
    color: @internal_element_prelight;
}

.spinbutton .button:first-child {
    border-radius: 2px 0 0 2px;
    box-shadow: none;
}

.spinbutton .button:last-child {
    border-radius: 0 2px 2px 0;
}

/* Add back the glowy effect from the entry covered by the pushed button background*/
.spinbutton .button:active,
.spinbutton .button:active:focus {
    box-shadow: 1 0 inset @inset_dark_color, 0 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
}

.spinbutton .button:first-child:active,
.spinbutton .button:first-child:active:focus {
    box-shadow: 1 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
}
/* ... */

